# blockchain-anomaly-detection

./: .env.example  CLAUDE.md  MANIFEST.in  README.md  SCALABILITY_ENHANCEMENTS.md  TEST_COVERAGE_SUMMARY.md  docker-compose.test.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml  performance-test.yml  security-scan.yml
alembic/: README  env.py
alembic/versions/: .gitkeep
docker/: Dockerfile  entrypoint.sh
docs/: API.md  DATABASE_MIGRATION_GUIDE.md  DATA_PERSISTENCE_LAYER.md  MODEL_SECURITY.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_QUICK_START.md  PHASE_0_SETUP_GUIDE.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_READINESS_SUMMARY.md  SECURITY_FIX_SUMMARY.md
k8s/: README.md  api-deployment.yaml  configmap.yaml  consumer-deployment.yaml  hpa.yaml  ingress.yaml  network-policies.yaml  pod-security-standards.yaml  postgresql-backup-cronjob.yaml  postgresql-configmap.yaml  postgresql-pvc.yaml  postgresql-secret.yaml  postgresql-service.yaml  postgresql-statefulset.yaml  pvc.yaml  redis-statefulset.yaml  resource-quotas.yaml  secrets.yaml  service.yaml
monitoring/: alert-rules.yaml  grafana-dashboard.json  grafana-dashboards.yml  grafana-datasources-test.yml  prometheus-test.yml  prometheus-values.yaml  prometheus.yml
scripts/: restore_database.sh  test_backup.sh
src/: __init__.py  main.py
src/anomaly_detection/: __init__.py  arima_model.py  isolation_forest.py
src/api/: __init__.py  api_utils.py  etherscan_api.py
src/api_server/: __init__.py  app.py  batch_routes.py  ml_lifecycle_routes.py  models.py  monitoring.py  performance_middleware.py
src/audit/: __init__.py  audit_logger.py
src/auth/: __init__.py  api_key_manager.py  jwt_handler.py  user_manager.py
src/cache/: __init__.py  cache_layer.py  optimized_cache.py  redis_client.py
src/data_processing/: __init__.py  data_cleaning.py  data_cleaning_dask.py  data_transformation.py
src/database/: __init__.py  connection.py  models.py
src/database/repositories/: __init__.py  anomaly_repository.py  audit_repository.py  base_repository.py  model_repository.py  transaction_repository.py  user_repository.py
src/middleware/: __init__.py  rate_limiter.py
src/ml/: __init__.py  storage.py
src/ml/deployment/: __init__.py  ab_tester.py  model_manager.py
src/ml/monitoring/: __init__.py  drift_detector.py
src/ml/security/: __init__.py  (+1 more)
src/streaming/: __init__.py  bounded_buffer.py  distributed_kafka_consumer.py  kafka_consumer.py  stream_processor.py
src/utils/: __init__.py  config.py  logger.py  sentry.py
src/visualization/: __init__.py  visualization.py
terraform/production/: main.tf  variables.tf
tests/: __init__.py  test_ab_tester.py  test_api.py  test_api_server.py  test_api_utils.py  test_config.py  test_data_cleaning.py  test_data_cleaning_dask.py  test_data_transformation.py  test_drift_detector.py  test_integration.py  test_kafka_consumer.py  test_monitoring.py  test_secure_unpickler.py  test_sentry.py  test_stream_processor.py
tests/benchmarks/: test_api_benchmarks.py
tests/load/: locustfile.py
tests/load_testing/: README.md  locustfile.py
tests/profiling/: memory_profile_test.py
tests/security/: __init__.py  conftest.py  test_api_keys.py  test_audit_logging.py  test_authentication.py  test_authorization.py  test_rate_limiting.py
(+9 files in other folders)
